Added documentation for endpoints for matchmaker and updated ones for word. Deleted duplicate front end folder
